# mcp-servers

./: .gitignore  README.md  pyproject.toml
docs/: CATEGORIES.md  architecture.md  mcp_server_use_categories.md  planner.md  setup.md
docs/categories/: autonomous_reasoner.md  capability_discovery.md  data_provider.md  prompt_helper.md
src/mcp_math_servers/: __init__.py
src/mcp_math_servers/client/: __init__.py  chat.py  demo.py  planner.py
src/mcp_math_servers/servers/: __init__.py  autonomous_reasoner.py  capability_discovery.py  data_provider.py  prompt_helper.py
tests/: conftest.py  test_autonomous_reasoner_server.py  test_capability_server.py  test_data_provider_server.py  test_prompt_helper_server.py
