[build-system]
requires = ["hatchling>=1.22"]
build-backend = "hatchling.build"

[project]
name = "fastmcp-math-servers"
version = "0.1.2"
description = "Example FastMCP servers covering the core MCP categories"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Codex Samples"}]
dependencies = [
    "fastmcp>=2.13.0",
    "openai>=2.6.0,<3",
    "python-dotenv>=1.0",
    "colorama>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.5",
]

[project.scripts]
fastmcp-math-demo = "mcp_math_servers.client.demo:main"
fastmcp-math-chat = "mcp_math_servers.client.chat:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_math_servers"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "DTZ", "ASYNC"]

[tool.pytest.ini_options]
pythonpath = ["src"]
